File: pm.c
Original provenience: unknown 
Source: HPEC Challenge Benchmark Suite

2016-01-21
- Cast parameter c of pm_memset to unsigned char to resolve compiler warning that "implicit conversion loses integer precision".
- Cast result of sizeof operator in call to pm_memset to int to resolve compiler warnings that "implicit conversion changes signedness".
- Converted type of local variables match_index and min_MSE_index in pm_kernel, as well as array base type of member size in pm_float_array_t from unsigned int to int to resolve compiler warnings that "implicit conversion changes signedness".
- Removed register storage class for local variables in pm_kernel.

2016-01-07
- Added original name to generic TACLeBench header.
- Added forward declarations for all functions.
- Inlined contents of file input.c (i.e. definitions of lib_data and pattern_data).
- Renamed function main to pm_main.
- Renamed function init to pm_init_data.
- Renamed function clean to pm_clean.
- Changed all //-style comments to /* */-style comments
- Renamed function fabs_ to pm_fabs.
- Renamed function setcoeff to pm_init_coeff.
- Renamed pow10fpm to pm_pow10f.
- Renamed log10fpm to pm_log10f.
- Renamed my_floor to pm_floor.
- Renamed my_ceil to pm_ceil.
- Renamed my_memcpy to pm_memcpy.
- Renamed my_memset to pm_memset.
- Renamed function pm to pm_kernel.
- Added function pm_init that handles the initialization of ...
- Added function pm_return that handles the original return value of main.
- Added new function main that first calls pm_init, then pm_main and finally returns the return value of pm_return.
- Replaced local variables pmdata, lib, patternand result in main with global static variables pm_data, pm_lib, pm_pattern and pm_result.