@@ -3,6 +3,7 @@ Original provenience: unknown
 Source: HPEC Challenge Benchmark Suite
 
 2016-01-21
+- Cast results of pm_ceil and pm_floor to int instead of the functions themselves to resolve compiler warning about "cast from function call of type 'float' to non-matching type 'int'".
 - Cast parameter c of pm_memset to unsigned char to resolve compiler warning that "implicit conversion loses integer precision".
 - Cast result of sizeof operator in call to pm_memset to int to resolve compiler warnings that "implicit conversion changes signedness".
 - Converted type of local variables match_index and min_MSE_index in pm_kernel, as well as array base type of member size in pm_float_array_t from unsigned int to int to resolve compiler warnings that "implicit conversion changes signedness".
